--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Chat</title>
+    <title>LiveChat : Video Calls and meetings</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <main>
+        <h1>LiveChat</h1>
         <div id="enter">
             <div id="join-btn">Join</div>
         </div>
@@ -20,9 +24,9 @@
 
         </div>
         <div id="buttons">
-            <div id="camera-btn">Camera</div>
-            <div id="audio-btn">Mute</div>
-            <div id="exit-btn">Exit</div>
+            <img src="Assets/cam.ico" id="camera-btn"></img>
+            <img src="Assets/mic.ico" id="audio-btn"></img>
+            <img src="Assets/exit.ico" id="exit-btn"></img>
         </div>
 
     </main>
